chore(YALB-647): fixes spacing on small screens

--- a/components/03-organisms/site-header/_yds-site-header.scss
+++ b/components/03-organisms/site-header/_yds-site-header.scss
@@ -64,6 +64,7 @@ $site-header-layout: map.deep-get(tokens.$tokens, 'site-header-layout');
 
   @media (min-width: tokens.$break-mobile) {
     border-bottom: var(--site-header-border-bottom);
+    margin-bottom: var(--size-spacing-7);
   }
 }
 
